overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,5 +4,5 @@
 	/*width: auto;*/
 }
 .loaded{
-	overflow-y: hidden;
+	overflow: hidden;
 }
